<resources>
    <string name="app_name">Mapcom</string>
    <string name="add_contact">Add Contact</string>
    <string name="detail_contact">Detail Contact</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="company">Company</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="comments">Comments</string>
    <string name="active">Active</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="title_activity_login">Sign in</string>
    <string name="alert_dialog_contact_add_title">Your contact has been added !</string>
    <string name="alert_dialog_contact_add_message">Do you want to add one more ?</string>
    <string name="alert_dialog_btn_yes">Yes</string>
    <string name="alert_dialog_btn_no">No</string>
    <string name="marker_contact_more_info">more info</string>
    <string name="marker_contact_info_click">Click on </string>
    <string name="marker_contact_info_at_bottom"> at the bottom</string>
    <string name="marker_contact_info_to_go">of the map to go *</string>
    <string name="marker_contact_description_icon_direction">direction icon</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_address">This address is invalid</string>
    <string name="error_invalid_postal_code">This postal code invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="title_activity_maps">Map</string>
</resources>
