<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_label_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/company"
        android:textSize="12sp"
        android:textColor="@color/colorLabel" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/company"
        android:textColor="@color/colorTextBlack"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_more_info"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/marker_contact_more_info"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marker_contact_info_click"
            android:textColor="@color/colorLabel"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/iv_icon_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/marker_contact_description_icon_direction"
            android:src="@drawable/ic_directions_black_24dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marker_contact_info_at_bottom"
            android:textColor="@color/colorLabel"
            android:textSize="12sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="-5dp"
        android:text="@string/marker_contact_info_to_go"
        android:textColor="@color/colorLabel"
        android:textSize="12sp" />
</LinearLayout>